Fixed caption text wrap around.

--- a/seattlegeni/website/html/media/css/common.css
+++ b/seattlegeni/website/html/media/css/common.css
@@ -90,7 +90,7 @@ code {
 
 #header #caption {
     margin-left: 20px;
-    font-size: 10pt;
+    font-size: 13.3333px; 
 }
 
 #header #caption a {
